examples/test/testpolicy15798.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15798
  namespace: namespace338
spec:
  podSelector:
    matchLabels:
      key13: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value0
          key32: value1
      podSelector:
        matchLabels:
          key37: value41
          key40: value23
